ui: Fix rounded corner radius for shadows.

This makes sure nine-patch is updated when rounded corner radius
has changed and not only when elevation has changed.

WMTestSuite has also been updated to allow tests that call into
skia and use discardable memory (needed for corner radius test).

Bug: 788461
Tbr: sadrul@chromium.org
Test: wm_unittests --gtest_fiter=ShadowTest.AdjustRoundedCornerRadius
Change-Id: I4489fbf11416559a3da8ac3b194f96c59ed5801c